(hotfix/#1825): Fix links and text UI to make it clean and more readable.

--- a/static/css/base/common.less
+++ b/static/css/base/common.less
@@ -40,12 +40,12 @@ li {
 }
 body {
   font-size: 100%;
-  line-height: normal;
+  line-height: 1.5;
   background-color: @beige;
   font-family: @lucida_sans_serif-1;
 }
 p {
-  font-size: .875em;
+  font-size: 0.875em;
   line-height: 1.5em;
 }
 hr {
@@ -60,7 +60,7 @@ li {
 a {
   &:link {
     color: @link-blue;
-    text-decoration: underline;
+    text-decoration: none;
   }
   &:hover {
     color: @dark-green;
